--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>malydok's hub</title>
+	<link rel="stylesheet" href="../css/styles.css">
+	<link href='http://fonts.googleapis.com/css?family=Abel|Alegreya+Sans:300,500,300italic,500italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<h1>this is my page, you asshole</h1>
+	
+	<header class="header">
+		<div class="wrap">
+			<h1 class="title">Front-end developer's musings</h1>
+			<h2 class="subtitle">by Marek Pietrzak</h2>
+		</div>
+	</header>
+
+
+
+	<script src="../js/scripts.js" type="text/javascript"></script>
 </body>
 </html>
