Starting to look like something

--- a/index.html
+++ b/index.html
@@ -1,22 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>malydok's hub</title>
-	<link rel="stylesheet" href="../css/styles.css">
-	<link href='http://fonts.googleapis.com/css?family=Abel|Alegreya+Sans:300,500,300italic,500italic' rel='stylesheet' type='text/css'>
-</head>
-<body>
-	
-	<header class="header">
-		<div class="wrap">
-			<h1 class="title">Front-end developer's musings</h1>
-			<h2 class="subtitle">by Marek Pietrzak</h2>
-		</div>
-	</header>
+---
+layout: default
+title: Front-end developer's musings
+---
 
-
-
-	<script src="../js/scripts.js" type="text/javascript"></script>
-</body>
-</html>
+<p data-height="300" data-theme-id="9851" data-slug-hash="emOVYQ" data-default-tab="result" data-user="malydok" class='codepen'>See the Pen <a href='http://codepen.io/malydok/pen/emOVYQ/'>Preloader animation</a> by Marek Pietrzak (<a href='http://codepen.io/malydok'>@malydok</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
+<script async src="//assets.codepen.io/assets/embed/ei.js"></script>
