Amar img url fix

--- a/amar/index.html
+++ b/amar/index.html
@@ -20,7 +20,7 @@
 
     <div class="container">
         <header class="page_header">
-            <h1 class="page_logo"><a href="/"><img src="../images/logo.png" alt=""></a></h1>
+            <h1 class="page_logo"><a href="/"><img src="/images/logo.png" alt=""></a></h1>
             <nav class="mobile_nav">
                 <a href="#" class="mobile_nav_toggle">Menu</a>
                 <ul>
@@ -49,7 +49,7 @@
 
 <main class="page_main home">
     <section class="section_twobg">
-    	<div class="section_twobg_left" style="background-image:url(../images/home-left.jpg)">
+    	<div class="section_twobg_left" style="background-image:url(/images/home-left.jpg)">
     		<div class="section_twobg_subtitle">
     			<h2>Une autre idée <span>du droit social</span></h2>
     		</div>
@@ -64,9 +64,9 @@
     		</nav>
     		<div class="bg_overlay_dark"></div>
     	</div>
-    	<div class="section_twobg_right" style="background-image:url(../images/home-right.jpg)">
+    	<div class="section_twobg_right" style="background-image:url(/images/home-right.jpg)">
     		<div class="section_twobg_title vc vertical_center_children">
-    			<img class="vertical_center" src="../images/logo.png" alt="">
+    			<img class="vertical_center" src="/images/logo.png" alt="">
     		</div>
     		<div class="bg_overlay_dark"></div>
     	</div>
