--- a/amar/index.html
+++ b/amar/index.html
@@ -24,20 +24,20 @@
             <nav class="mobile_nav">
                 <a href="#" class="mobile_nav_toggle">Menu</a>
                 <ul>
-                    <li><a href="">Cabinet</a></li>
-                    <li><a href="">Expertises</a></li>
-                    <li><a href="">Associés</a></li>
-                    <li><a href="">Actualités</a></li>
-                    <li><a href="">Contacts</a></li>
+                    <li><a href="/cabinet.html">Cabinet</a></li>
+                    <li><a href="/expertises.html">Expertises</a></li>
+                    <li><a href="/associes.html">Associés</a></li>
+                    <li><a href="/actualites.html">Actualités</a></li>
+                    <li><a href="/contacts.html">Contacts</a></li>
                 </ul>
             </nav>
             <nav class="page_nav">
                 <ul>
-                    <li><a href="">Cabinet</a></li>
-                    <li><a href="">Expertises</a></li>
-                    <li><a href="">Associés</a></li>
-                    <li><a href="">Actualités</a></li>
-                    <li><a href="">Contacts</a></li>
+                    <li><a href="/cabinet.html">Cabinet</a></li>
+                    <li><a href="/expertises.html">Expertises</a></li>
+                    <li><a href="/associes.html">Associés</a></li>
+                    <li><a href="/actualites.html">Actualités</a></li>
+                    <li><a href="/contacts.html">Contacts</a></li>
                 </ul>
             </nav>
             <ul class="nav_lang">
@@ -48,34 +48,39 @@
 
 
 <main class="page_main home">
-    <section class="section_twobg">
-    	<div class="section_twobg_left" style="background-image:url(images/home-left.jpg)">
-    		<div class="section_twobg_subtitle">
+    <section class="section_twobg expanding">
+    	<div class="section_twobg_left">
+    		<div class="section_twobg_subtitle line_before home_subtitle out">
     			<h2>Une autre idée <span>du droit social</span></h2>
     		</div>
-    		<nav class="nav_secondary vc">
-				<ul>
-					<li><a href=""><span>Cabinet</span></a></li>
-		            <li><a href=""><span>Expertises</span></a></li>
-		            <li><a href=""><span>Associés</span></a></li>
-		            <li><a href=""><span>Actualités</span></a></li>
-		            <li><a href=""><span>Contacts</span></a></li>
-				</ul>
-    		</nav>
-    		<div class="bg_overlay_dark"></div>
+    		<div class="curtain"></div>
+            <div class="section_twobg_bg" style="background-image:url(images/home-left.jpg)"></div>
     	</div>
-    	<div class="section_twobg_right" style="background-image:url(images/home-right.jpg)">
-    		<div class="section_twobg_title vc vertical_center_children">
-    			<img class="vertical_center" src="images/logo.png" alt="">
-    		</div>
-    		<div class="bg_overlay_dark"></div>
+    	<div class="section_twobg_right">
+    		<div class="curtain"></div>
+            <div class="section_twobg_bg" style="background-image:url(images/home-right.jpg)"></div>
     	</div>
+
+        <div class="section_twobg_middle">
+            <div class="section_twobg_title vertical_center_children">
+                <img class="vertical_center" src="images/logo.png" alt="">
+            </div>
+            <nav class="nav_secondary">
+                <ul>
+                    <li><a href="/cabinet.html"><span>Cabinet</span></a></li>
+                    <li><a href="/expertises.html"><span>Expertises</span></a></li>
+                    <li><a href="/associes.html"><span>Associés</span></a></li>
+                    <li><a href="/actualites.html"><span>Actualités</span></a></li>
+                    <li><a href="/contacts.html"><span>Contacts</span></a></li>
+                </ul>
+            </nav>
+        </div>
     </section>
 </main>
 
 
         <footer class="page_footer">
-            <p><a class="text_uppercase" href="">Amar legal</a> - 08 rue Decamps 75116 Paris - Tél +33 (0) 1 85 08 10 80 - <a href="">Mentions légales</a> - <a href="">Plan du site</a></p>
+            <p><span class="text_uppercase">Amar legal</span> - 08 rue Decamps 75116 Paris - <a href="tel:+33 (0) 1 85 08 10 80">Tél +33 (0) 1 85 08 10 80</a> - <a href="">Mentions légales</a> - <a href="">Plan du site</a></p>
         </footer>
     </div>
 
