--- a/amar/cabinet.html
+++ b/amar/cabinet.html
@@ -24,20 +24,20 @@
             <nav class="mobile_nav">
                 <a href="#" class="mobile_nav_toggle">Menu</a>
                 <ul>
-                    <li><a href="/cabinet.html">Cabinet</a></li>
-                    <li><a href="/expertises.html">Expertises</a></li>
-                    <li><a href="/associes.html">Associés</a></li>
-                    <li><a href="/actualites.html">Actualités</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="/amar/cabinet.html">Cabinet</a></li>
+                    <li><a href="/amar/expertises.html">Expertises</a></li>
+                    <li><a href="/amar/associes.html">Associés</a></li>
+                    <li><a href="/amar/actualites.html">Actualités</a></li>
+                    <li><a href="/amar/contacts.html">Contacts</a></li>
                 </ul>
             </nav>
             <nav class="page_nav">
                 <ul>
-                    <li><a href="/cabinet.html">Cabinet</a></li>
-                    <li><a href="/expertises.html">Expertises</a></li>
-                    <li><a href="/associes.html">Associés</a></li>
-                    <li><a href="/actualites.html">Actualités</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="/amar/cabinet.html">Cabinet</a></li>
+                    <li><a href="/amar/expertises.html">Expertises</a></li>
+                    <li><a href="/amar/associes.html">Associés</a></li>
+                    <li><a href="/amar/actualites.html">Actualités</a></li>
+                    <li><a href="/amar/contacts.html">Contacts</a></li>
                 </ul>
             </nav>
             <ul class="nav_lang">
