--- a/amar/index.html
+++ b/amar/index.html
@@ -24,20 +24,20 @@
             <nav class="mobile_nav">
                 <a href="#" class="mobile_nav_toggle">Menu</a>
                 <ul>
-                    <li><a href="/cabinet.html">Cabinet</a></li>
-                    <li><a href="/expertises.html">Expertises</a></li>
-                    <li><a href="/associes.html">Associés</a></li>
-                    <li><a href="/actualites.html">Actualités</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="/amar/cabinet.html">Cabinet</a></li>
+                    <li><a href="/amar/expertises.html">Expertises</a></li>
+                    <li><a href="/amar/associes.html">Associés</a></li>
+                    <li><a href="/amar/actualites.html">Actualités</a></li>
+                    <li><a href="/amar/contacts.html">Contacts</a></li>
                 </ul>
             </nav>
             <nav class="page_nav">
                 <ul>
-                    <li><a href="/cabinet.html">Cabinet</a></li>
-                    <li><a href="/expertises.html">Expertises</a></li>
-                    <li><a href="/associes.html">Associés</a></li>
-                    <li><a href="/actualites.html">Actualités</a></li>
-                    <li><a href="/contacts.html">Contacts</a></li>
+                    <li><a href="/amar/cabinet.html">Cabinet</a></li>
+                    <li><a href="/amar/expertises.html">Expertises</a></li>
+                    <li><a href="/amar/associes.html">Associés</a></li>
+                    <li><a href="/amar/actualites.html">Actualités</a></li>
+                    <li><a href="/amar/contacts.html">Contacts</a></li>
                 </ul>
             </nav>
             <ul class="nav_lang">
@@ -67,11 +67,11 @@
             </div>
             <nav class="nav_secondary">
                 <ul>
-                    <li><a href="/cabinet.html"><span>Cabinet</span></a></li>
-                    <li><a href="/expertises.html"><span>Expertises</span></a></li>
-                    <li><a href="/associes.html"><span>Associés</span></a></li>
-                    <li><a href="/actualites.html"><span>Actualités</span></a></li>
-                    <li><a href="/contacts.html"><span>Contacts</span></a></li>
+                    <li><a href="/amar/cabinet.html"><span>Cabinet</span></a></li>
+                    <li><a href="/amar/expertises.html"><span>Expertises</span></a></li>
+                    <li><a href="/amar/associes.html"><span>Associés</span></a></li>
+                    <li><a href="/amar/actualites.html"><span>Actualités</span></a></li>
+                    <li><a href="/amar/contacts.html"><span>Contacts</span></a></li>
                 </ul>
             </nav>
         </div>
