--- a/amar/cabinet.html
+++ b/amar/cabinet.html
@@ -20,7 +20,7 @@
 
     <div class="container">
         <header class="page_header">
-            <h1 class="page_logo"><a href="/"><img src="images/logo.png" alt=""></a></h1>
+            <h1 class="page_logo"><a href="/amar/"><img src="images/logo.png" alt=""></a></h1>
             <nav class="mobile_nav">
                 <a href="#" class="mobile_nav_toggle">Menu</a>
                 <ul>
