--- a/amar/associes.html
+++ b/amar/associes.html
@@ -47,33 +47,20 @@
         </header>
 
 
-<main class="page_main home">
-    <section class="section_twobg expanding">
-    	<div class="section_twobg_left">
-    		<div class="section_twobg_subtitle line_before home_subtitle out">
-    			<h2>Une autre idée <span>du droit social</span></h2>
-    		</div>
-    		
-            <div class="section_twobg_bg" style="background-image:url(images/home-left.jpg)"></div>
-    	</div>
-    	<div class="section_twobg_right">
-            <div class="section_twobg_bg" style="background-image:url(images/home-right.jpg)"></div>
-    	</div>
-
-        <div class="section_twobg_middle">
-            <div class="section_twobg_title vertical_center_children">
-                <img class="vertical_center" src="images/logo.png" alt="">
-            </div>
-            <nav class="nav_secondary">
-                <ul>
-                    <li><a href="/amar/cabinet.html"><span>Cabinet</span></a></li>
-                    <li><a href="/amar/expertises.html"><span>Expertises</span></a></li>
-                    <li><a href="/amar/associes.html"><span>Associés</span></a></li>
-                    <li><a href="/amar/actualites.html"><span>Actualités</span></a></li>
-                    <li><a href="/amar/contacts.html"><span>Contacts</span></a></li>
-                </ul>
-            </nav>
-        </div>
+<main class="page_main">
+    <section class="section_triple">
+    	<a href="" class="section_triple_part">
+            <div class="section_triple_title vertical_center_children"><h2 class="vertical_center"><span>Sophie</span> <span>Amar</span></h2></div>
+            <div class="section_triple_bg" style="background-image:url(images/associes1.jpg)"></div>
+        </a>
+        <a href="" class="section_triple_part">
+            <div class="section_triple_title vertical_center_children"><h2 class="vertical_center"><span>Audrey</span> <span>Gomez</span> <span>de Miranda</span></h2></div>
+            <div class="section_triple_bg" style="background-image:url(images/associes2.jpg)"></div>
+        </a>
+        <a href="" class="section_triple_part">
+            <div class="section_triple_title vertical_center_children"><h2 class="vertical_center"><span>Anne</span> <span>Grenaud</span></h2></div>
+            <div class="section_triple_bg" style="background-image:url(images/associes3.jpg)"></div>
+        </a>
 
         <div class="curtain left"></div>
         <div class="curtain right"></div>
