--- a/amar/cabinet.html
+++ b/amar/cabinet.html
@@ -50,14 +50,12 @@
 <main class="page_main">
     <section class="section_twobg">
         <div class="section_twobg_left">
-            <div class="curtain"></div>
             <div class="section_twobg_bg" style="background-image:url(images/cabinet-left.jpg)"></div>
         </div>
         <div class="section_twobg_right">
             <div class="section_twobg_subtitle line_before">
                 <h2>Des réponses aux enjeux RH pour servir la stratégie globale de l’entreprise</h2>
             </div>
-            <div class="curtain"></div>
             <div class="section_twobg_bg" style="background-image:url(images/cabinet-right.jpg)"></div>
         </div>
 
@@ -66,12 +64,15 @@
                 <span class="vertical_center">Cabinet</span>
             </div>
         </div>
+
+        <div class="curtain left"></div>
+        <div class="curtain right"></div>
     </section>
 
-    <article class="page_content slash_list">
+    <article class="page_content text_medium">
         <h2><span>Le cabinet Amar Legal, un cabinet dédié au droit social</span></h2>
 
-        <div class="cf">
+        <div class="slash_list cf">
             <div class="page_content_left">
                 <p>Le cabinet Amar Legal, partenaire au quotidien de ses clients sur les aspects RH, rend un service sur-mesure pour un droit social  qui soit intégré dans la stratégie globale de l’entreprise et non pas un frein à son développement.</p>
                 
